--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -62,8 +62,17 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "execution_count": 4,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "17"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 4
     },
     {
       "cell_type": "code",
@@ -71,13 +80,24 @@
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "execution_count": 5,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "3.3333333333333335"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 5
     },
     {
       "cell_type": "markdown",
       "source": "## Author\nFelipe Morales",
-      "metadata": {}
+      "metadata": {
+        "jp-MarkdownHeadingCollapsed": true
+      }
     }
   ]
 }
